fixing layout bug

--- a/styles.css
+++ b/styles.css
@@ -60,10 +60,4 @@ figcaption {
 
 }
 
-.contain {
-    display: grid;
-    grid-template-columns: 50vw 50vw;
-    grid-template-rows: auto;
-
-}
 
